# jmat

./: cargo.toml
crates/jmat-cli/: Cargo.toml
crates/jmat-cli/src/: main.rs
crates/jmat-core/: Cargo.toml
crates/jmat-core/src/: expr.rs  lib.rs  matrix.rs  scalar.rs  types.rs
crates/jmat-core/src/matrix/: dmatrix.rs  mod.rs  smatrix.rs
crates/jmat-eval/: Cargo.toml
crates/jmat-parser/: Cargo.toml
